feat: avance de primeros endpoint

--- a/3-express-js/3.1-shoes-api/package.json
+++ b/3-express-js/3.1-shoes-api/package.json
@@ -4,7 +4,8 @@
   "description": "Esta es mi primer api sobre shoes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "montoyaguzman7",
   "license": "ISC",
